# maschinen

./: .envrc  .gitignore  .gitmodules  README.org  colorscheme.json  systems.nix  update-wal.sh  wpg-set-theme.sh
scripts/: glitchlock  glitchlock.sh  polybar-hackspeed.sh
scripts/polybar/: hackspeed.sh  redshift.sh
zzz/: .xinitrc  boot-and-filesystems.nix  configuration.nix  graphics.nix  hardware-configuration.nix  keyboard.nix  networking.nix  nixpkgs-configuration.nix  picom-ibhagwan.nix  pinned.nix  polybar.conf  services.nix  system-configuration.nix
zzz/nvim/: custom.vim
zzz/overrides/: kmonad.nix  picom-ibhagwan.nix  xkeysnail.nix
zzz/users/me/: default.nix  mpd.conf
zzz/users/me/apps/: polybar.conf  polybar.nix
zzz/users/me/apps/kmonad/: zzz.kbd
zzz/users/me/apps/nvim/: custom.vim
zzz/users/me/apps/xmonad/: EvsphXMonad.hs  default.nix  evsph-xmonad.cabal
zzz/users/me/xmonad/: Colors.hs  EvsphXMonad.hs  evsph-xmonad.cabal
zzz/xmonad/: Colors.hs  EvsphXMonad.hs  default.nix  xmonad.hs
