cabal-version:       >=1.10

name:                evsph-xmonad
version:             0.1.0.0
author:              evertedsphere
maintainer:          evertedsphere@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    EvsphXMonad
  other-modules:
    Colors
  build-depends:       
    base >=4.13 && <4.14, 
    containers >=0.6 && <0.7,
    xmonad,
    xmonad-contrib,
    xmonad-extras
  default-language:    Haskell2010
